Updated status resource, no need for municipalityId. Was planning on making it datadriven, but after some investigation i realised the patch status resource have never been used and the statuses is set automatically on creation.
